--- a/MAULibrary/MAULibrary/View/Storyboards/Initial.storyboard
+++ b/MAULibrary/MAULibrary/View/Storyboards/Initial.storyboard
@@ -65,23 +65,23 @@
                                             <constraint firstAttribute="height" constant="40" id="st8-4S-nSA"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ten a la mano tu INE/IFE vigente" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTz-Bc-ziX">
-                                        <rect key="frame" x="73" y="125" width="174.5" height="14"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ten a la mano tu INE/IFE o Pasaporte vigente" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTz-Bc-ziX">
+                                        <rect key="frame" x="38.5" y="125" width="243" height="14"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                                         <color key="textColor" name="GrayText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ng7-rN-tcU">
-                                        <rect key="frame" x="106" y="139" width="108" height="26"/>
+                                        <rect key="frame" x="71.5" y="139" width="177" height="26"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
-                                        <state key="normal" title="¿No tienes INE/IFE?"/>
+                                        <state key="normal" title="¿No tienes INE/IFE o Pasaporte?"/>
                                         <connections>
                                             <action selector="noIDTapped:" destination="Pe9-YT-4Jw" eventType="touchUpInside" id="pPZ-0a-mNE"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KBU-tH-XS3">
+                                    <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KBU-tH-XS3">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
-                                        <color key="backgroundColor" white="1" alpha="0.80080782312925169" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -122,21 +122,6 @@ verificar tu identidad</string>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cornerView" translatesAutoresizingMaskIntoConstraints="NO" id="TgX-d2-Mhc">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="qbC-ga-15D">
-                                        <rect key="frame" x="132.5" y="27" width="55" height="26"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="26" id="AFg-iQ-vBJ"/>
-                                            <constraint firstAttribute="width" constant="55" id="qZP-tE-wCq"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEb-Ii-vJe">
-                                        <rect key="frame" x="49.5" y="86" width="221.5" height="42"/>
-                                        <string key="text">Código vía celular o correo 
-electrónico</string>
-                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="18"/>
-                                        <color key="textColor" name="NavyBlue"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXO-uY-p17">
                                         <rect key="frame" x="56.5" y="134" width="207" height="28"/>
                                         <string key="text">Recibirás un código de 6 dígitos en tu 
@@ -145,6 +130,21 @@ celular o correo electrónico</string>
                                         <color key="textColor" name="GrayText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEb-Ii-vJe">
+                                        <rect key="frame" x="49.5" y="86" width="221.5" height="42"/>
+                                        <string key="text">Código vía celular o correo 
+electrónico</string>
+                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="18"/>
+                                        <color key="textColor" name="NavyBlue"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="qbC-ga-15D">
+                                        <rect key="frame" x="132.5" y="27" width="55" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="26" id="AFg-iQ-vBJ"/>
+                                            <constraint firstAttribute="width" constant="55" id="qZP-tE-wCq"/>
+                                        </constraints>
+                                    </imageView>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="question" translatesAutoresizingMaskIntoConstraints="NO" id="EP0-bL-3dR">
                                         <rect key="frame" x="280" y="155" width="40" height="40"/>
                                         <constraints>
@@ -152,9 +152,9 @@ celular o correo electrónico</string>
                                             <constraint firstAttribute="height" constant="40" id="sJt-vK-WxZ"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJi-KU-p2W">
+                                    <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJi-KU-p2W">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
-                                        <color key="backgroundColor" white="1" alpha="0.80080782309999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -199,11 +199,18 @@ celular o correo electrónico</string>
                     <connections>
                         <outlet property="blockedFaceAuthView" destination="KBU-tH-XS3" id="yAm-R8-5st"/>
                         <outlet property="blockedTokenAuthView" destination="xJi-KU-p2W" id="vP6-Fl-ixe"/>
+                        <outlet property="dontHaveIDButton" destination="ng7-rN-tcU" id="flq-xi-PMY"/>
                         <outlet property="extensionView" destination="Pih-Rm-34u" id="2ZI-NR-y7I"/>
                         <outlet property="faceAuthView" destination="nod-EL-cpx" id="8Rj-bc-8Yu"/>
+                        <outlet property="facialPrimaryInstruction" destination="gpW-fG-6A3" id="Fzv-RZ-ZeC"/>
                         <outlet property="facialQuestionMark" destination="DOY-Us-iqV" id="mhC-ur-TM8"/>
+                        <outlet property="facialSecondaryInstruction" destination="eTz-Bc-ziX" id="4E9-Ti-vAC"/>
+                        <outlet property="selfieImage" destination="1oY-U5-rCM" id="c9f-N8-faY"/>
                         <outlet property="tokenAuthView" destination="vWN-dH-mWw" id="9TK-H2-oYN"/>
+                        <outlet property="tokenImage" destination="qbC-ga-15D" id="cX0-TF-wLg"/>
+                        <outlet property="tokenPrimaryInstruction" destination="hEb-Ii-vJe" id="p3K-84-QVE"/>
                         <outlet property="tokenQuestionMark" destination="EP0-bL-3dR" id="CZ4-xZ-M2r"/>
+                        <outlet property="tokenSecondaryInstruction" destination="VXO-uY-p17" id="hIT-tV-OHN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0z4-9A-2R1" sceneMemberID="firstResponder"/>
@@ -233,7 +240,7 @@ celular o correo electrónico</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Nz3-Lx-Nl5">
-                                <rect key="frame" x="93.5" y="353" width="163" height="45"/>
+                                <rect key="frame" x="114.5" y="355" width="163" height="45"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selfie" translatesAutoresizingMaskIntoConstraints="NO" id="n7t-ne-zfA">
                                         <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
@@ -262,26 +269,28 @@ celular o correo electrónico</string>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="JP8-Ue-dXW">
-                                <rect key="frame" x="93.5" y="273" width="227" height="45"/>
+                                <rect key="frame" x="114.5" y="273" width="185.5" height="47"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ine" translatesAutoresizingMaskIntoConstraints="NO" id="jT2-lW-dBf">
-                                        <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
+                                        <rect key="frame" x="0.0" y="1" width="45" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="45" id="DOp-JJ-bYV"/>
                                             <constraint firstAttribute="height" constant="45" id="coH-oc-kue"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xc7-Qc-zyQ">
-                                        <rect key="frame" x="60" y="7.5" width="167" height="30.5"/>
+                                        <rect key="frame" x="60" y="0.0" width="125.5" height="47"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paso 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJD-bt-llj">
-                                                <rect key="frame" x="0.0" y="0.0" width="167" height="14"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="125.5" height="14"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
                                                 <color key="textColor" name="Cerulean"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Captura tu INE/IFE vigente" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNE-zt-VJS">
-                                                <rect key="frame" x="0.0" y="14" width="167" height="16.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNE-zt-VJS">
+                                                <rect key="frame" x="0.0" y="14" width="125.5" height="33"/>
+                                                <string key="text">Captura tu INE/IFE
+o Pasaporte vigente</string>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <color key="textColor" name="GrayText"/>
                                                 <nil key="highlightedColor"/>
@@ -600,13 +609,13 @@ Sábados de 9:00 a 14:00 hrs.</string>
         <image name="telephone" width="106.5" height="106.5"/>
         <image name="threeDigits" width="72" height="27"/>
         <namedColor name="BrownGray">
-            <color red="0.59200000762939453" green="0.59200000762939453" blue="0.59200000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Cerulean">
             <color red="0.0039215686274509803" green="0.50588235294117645" blue="0.7686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="GrayText">
-            <color red="0.21600000560283661" green="0.25099998712539673" blue="0.27799999713897705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.21568627450980393" green="0.25098039215686274" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="NavyBlue">
             <color red="0.0" green="0.28627450980392155" blue="0.55294117647058827" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
